--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
   - sudo apt-get update -qq
   - git clone https://github.com/duraki/devist.git devist
   - cd devist
-  - gem build devist
+  - gem build devist.gemspec
   - devist --help
